--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -26,3 +26,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.leaflet-container {
+  height: 800px;
+  width: 100%;
+}
