--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: #f6f6f6;
 }
 
 .App-logo {
@@ -37,7 +38,7 @@
   flex-direction: row;
 }
 
-.events {
+.Events {
   text-align: left;
   flex-direction: column;
   width: 350px;
@@ -46,8 +47,20 @@
   margin: 5px 0 5px 5px;
 }
 
+.Events-banner {
+  text-align: center;
+  font-weight: bold;
+  padding: 0 0 5px 0;
+  border-bottom: 1px solid #dbdbdb;
+}
+
+.Events-container {
+
+}
+
 .Event-container {
-  margin-bottom: 10px;
+  padding: 5px 0 5px 0;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 .Event-header {
