--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -67,3 +67,13 @@
   margin-bottom: 5px;
   font-weight: bold
 }
+
+.EditPanel-variable {
+  margin-bottom: 5px;
+}
+
+.EditPanel-sectionLabel {
+  margin: 10px 0;
+  text-align: center;
+  font-weight: bold;
+}
